<resources>
    <string name="app_name">MCR</string>
    <string name="open_file">Open source file</string>
    <string name="styleComments">Clean the code</string>
    <string name="errorComments">Problem with code</string>
    <string name="otherComments">Other suggestions</string>
    <string name="textComment">Text comment</string>
    <string name="voiceComment">Voice comment</string>
    <string name="pref_group_author">Author data</string>
    <string name="pref_author_title">Your name</string>
    <string name="pref_author_summary">Will be used as a signature for your comments</string>
    <string name="pref_highlightSource_title">Highlight source code</string>
    <string name="pref_highlightSource_summary">If you find your device too slow, uncheck this
        option. Takes effect
        after file reopen.
    </string>
    <string name="pref_tabSize_title">Tab size</string>
    <string name="pref_group_sourceCode">Source code</string>
    <string name="chooseLineToComment">Choose line to comment first.</string>
    <string name="unexpectedCommentError">There was an unexpected error. Comment has not been
        saved.
    </string>
    <string name="pref_tabSize_summary">Takes effect after file reopen.</string>
    <string name="settings">Settings</string>
    <string name="open_recent">Open recent file</string>
    <string name="record_comment">Recording...</string>
    <string name="record_done">Done</string>
    <string name="record_cancel">Abort</string>
    <string name="line_has_no_comments">Line has no comments.</string>
    <string name="no_comments_added">No comments has been added</string>
</resources>