<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_group_author">
        <EditTextPreference
                android:key="author"
                android:title="@string/pref_author_title"
                android:summary="@string/pref_author_summary"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_group_sourceCode" android:summary="sadf">
        <CheckBoxPreference
                android:key="highlightSources"
                android:title="@string/pref_highlightSource_title"
                android:summary="@string/pref_highlightSource_summary"
                android:defaultValue="true"/>
        <EditTextPreference
                android:key="tabSize"
                android:title="@string/pref_tabSize_title"
                android:defaultValue="4"
                android:maxLength="1"
                android:summary="@string/pref_tabSize_summary"/>
    </PreferenceCategory>

</PreferenceScreen>